DONE Profile <div> class needs to be changed to rightHorizontal, background color removed DONE change viewer button to View PDF, fix alignment DEFER plan PDF has a bad name When Printed (download file name is ok) DONE Create new plan button is missing

--- a/service/sr-careplanner/src/setup/setup.less
+++ b/service/sr-careplanner/src/setup/setup.less
@@ -13,3 +13,7 @@ setup #adminNav.c-nav{
 setup .leftHorizontal{
 margin-right:50px;
 }
+
+setup #adminNav.c-nav{
+	background:none;
+}
